@@ -17,6 +17,8 @@ Change log 0.8 (under development)
 * Better error message when a class is not replayed when doing expectNew.
 * Added support to easy suppress several methods in the same class.
 * doInvokeMethod in PowerMock now catches and deals correctly with InvocationTargetExceptions.
+* It's now possible to run a single test case in junit4
+* Test delegates now implements Sortable
                              
 Change log 0.7 (released)
 -------------------------
